# strategos

./: LICENSE  Makefile  README.md  REFACTORING_NOTES.md  Roadmap.md  api.py  demo_phase2b.py  pyproject.toml  requirements.txt  run_simulation.py  strategos.db  strategos.py  strategos.sh
checkpoints/: checkpoint_0.000000.pkl  checkpoint_1.000000.pkl
core/: __init__.py  checkpoints.py  config.py  event_handlers.py  event_store.py  events.py  exceptions.py  logging.py  simulation.py  state.py  time.py
migrations/: 001_initial_schema.sql
spatial/: __init__.py  entities.py  index.py  movement.py
static/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py  test_checkpoints.py  test_event_handlers.py  test_event_store.py  test_event_validation.py  test_events.py  test_exceptions.py  test_movement.py  test_movement_replay.py  test_phase1.py  test_phase2_entities.py  test_simulation.py  test_spatial_index.py  test_state.py  test_time.py
